--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>selenium-java</artifactId>
             <version>3.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
     </dependencies>
 
