--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,15 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>3.14.0</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.0.0-alpha-1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
