--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>4.0.0-alpha-1</version>
+        </dependency>
 
 
     </dependencies>
